docs(howtos): add display by categories
organize articles by categories
improve how to translate article
change how to contribute article

Signed-off-by: Naylin Medina <nmedina@teclib.com>

--- a/_posts/static/2018-01-08-use-cases.md
+++ b/_posts/static/2018-01-08-use-cases.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-how-tos: true
+howtos: true
 published: true
 title: Use Cases
 permalink: how-tos/use-cases
 description: What you should know
+category: user
+date: 2017-12-16
 ---
 # Flyve MDM Dashboard
 
