--- a/_posts/static/2018-01-08-use-cases.md
+++ b/_posts/static/2018-01-08-use-cases.md
@@ -1,22 +1,19 @@
 ---
-layout: post
-howtos: true
+layout: howtos
 published: true
 title: Use Cases
 permalink: how-tos/use-cases
-description: What you should know
 category: user
 date: 2017-12-16
 ---
-# Flyve MDM Dashboard
 
 The iOS MDM Dashboard allows the management of the mobile fleet with the same features of the Web Dashboard but from the comfort of your iOS Device.
 
-## 1. Create Account
+### 1. Create Account
 
 To manage the mobile fleet the Administrator must create an account in Flyve MDM with just an email, once it is validated, the Administrator will be able to create and control the mobile fleets.
 
-## 2. Invitation
+### 2. Invitation
 
 The users must have installed on their phones the Flyve MDM Agent to proceed to enroll on the Dashboard.
 
@@ -29,21 +26,21 @@ The Administrator only requires the email of the user whose device will be manag
 
 Once the user receives the invitation in his email account and enrolls the device it will appear on the Devices section on the Dashboard.
 
-## 3. Fleet Control
+### 3. Fleet Control
 
 Through the MQTT, a Machine to Machine (M2M) protocol the Agent is capable of maintaining a connection with the backend, thanks to the concepts of will and testament of the protocol.
 
-### 3.1 Files & Apps
+#### 3.1 Files & Apps
 
 To deploy files and Apps, they must be added on the Dashboard so they can be available on the fleets.
 
 Once they're added and the fleet is applied, the Agent will receive a MQTT message with the information to start the download using an HTTP request.
 
-## 4. Users section
+### 4. Users section
 
 When an Agent is enrolled a new User is added to this section, the Administrator can edit the  information of the users.
 
-## 5. Unenrollment
+### 5. Unenrollment
 
 To unenroll an Agent, a MQTT message is sent to the device running this agent to process unenrollment. Once the unenrollment is done, the agent sends a MQTT message to acknowledge the unenrollment request.
 
